# ERF

./: .codespell-ignore-words  .codespellrc  .gitignore  .gitmodules  CHANGES  CMakeLists.txt  README.rst  SAM_PRECIPFALL_PR_SUMMARY_DRAFT.txt  aml.patch  context7.json
Exec/: CMakeLists.txt  ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  Make.ERF
Exec/ABL/: ERF_Prob.H  ERF_Prob.cpp  README.md  erf_terrain_def  inputs.read  inputs_DataSampler  inputs_GABLS1_deardorff  inputs_GABLS1_mynn25  inputs_GABLS1_ysu  inputs_deardorff  inputs_deardorff_msf  inputs_deardorff_no_msf  inputs_ml_most  inputs_most  inputs_most_bomex  inputs_most_msf  inputs_most_mynnedmf  inputs_most_no_msf  inputs_most_pbl  inputs_most_test  inputs_numdiff  inputs_smagorinsky_msf  inputs_smagorinsky_no_msf  inputs_terrain  inputs_vel_avg  module_bl_mynn_1d_cc.cpp  mrf_stable_gabls  mrf_stable_sounding_gabls  mrf_unstable  run_anelastic_MOST_test_suite.sh
Exec/ABL/MYNN_Debug/: module_bl_mynn_1d_cc.cpp  transform_text_sed_real.sh
Exec/ABL/Rayleigh_check/: inputs_rayleigh_check
Exec/ABL/WW3_coupling/: README  inputs_mpmd
Exec/ABL/column_diffusion_test/: README.md  input_sounding  inputs_sfclay
Exec/ABL/immersed_forcing/: input_sounding_CBL  inputs_if_building
Exec/ABL_input_sounding/: ERF_Prob.H  ERF_Prob.cpp  abl_mwe.i  abl_mwe_moist_stationary.i
Exec/CanonicalFlows/Bomex/: flux  input_anel_SatAdj  mean  surf
Exec/CanonicalFlows/Channel_DNS/: README.md
Exec/CanonicalFlows/DensityCurrent/: inputs_amr  inputs_hybrid_zlev  inputs_refsoln
Exec/CanonicalFlows/EkmanSpiral/: inputs_custom
Exec/CanonicalTests/ABL/: input_sounding_MS94_B  input_sounding_nbl  input_sounding_nbl_EB  inputs.read  inputs.write  inputs_GABLS1_EB  inputs_GABLS1_deardorff  inputs_GABLS1_mynn25  inputs_GABLS1_smargorinsky  inputs_GABLS1_ysu  inputs_anel_most  inputs_canopy  inputs_deardorff  inputs_most  inputs_most_bomex  inputs_most_nbl  inputs_most_nbl_EB  inputs_most_pbl  inputs_omp  inputs_sample  inputs_smagorinsky  inputs_terrain  inputs_vel_avg  mrf_sounding_unstable  mrf_unstable
Exec/CanonicalTests/Bomex/: README  input_Kessler  input_SAM  input_anel_SatAdj  inputs_bomex
Exec/CanonicalTests/Channel_DNS/: README.md
Exec/CanonicalTests/DensityCurrent/: inputs_crse_halfdomain_zlev  inputs_fft  inputs_hybrid  inputs_refsoln  inputs_wrf_baseline
Exec/CanonicalTests/EkmanSpiral/: inputs_custom  inputs_ideal  inputs_input_sounding  wrfinput_ekman_d01
Exec/CanonicalTests/Hurricanes/: README.md
Exec/CanonicalTests/RICO/: README.md  input_Kessler  input_Kessler_regtest  input_SAM  input_sdm  inputs_Kessler  inputs_Kessler_regtest  inputs_SAM  inputs_SDM
Exec/CanonicalTests/SquallLine_2D/: README  inputs_ml  inputs_moisture_Gabersek  inputs_moisture_Morrison  inputs_moisture_SAM  inputs_moisture_WRF  inputs_moisture_WSM6  inputs_squallline
Exec/CanonicalTests/SuperCell_3D/: README  inputs_moisture_Tissaoui  inputs_supercell
Exec/DevTests/ABL_MYNN_Debug/: ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  inputs_most_mynnedmf
Exec/DevTests/ABL_with_WW3/: ERF_Prob.H  ERF_Prob.cpp  inputs_mpmd
Exec/DevTests/DataAssimilation/: ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  inputs_advecting_coarse  main.cpp
Exec/DevTests/EB_Poiseuille/: ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  inputs_compressible  plot_line.py
Exec/DevTests/EB_SquareCylinder/: CMakeLists.txt  ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  inputs_anelastic  inputs_multilevel
Exec/DevTests/EB_Test/: ERF_Prob.H  ERF_Prob.cpp  inputs  inputs_diff
Exec/DevTests/FlowInABox/: ERF_Prob.H  ERF_Prob.cpp  inputs
Exec/DevTests/Hurricane/: CMakeLists.txt  ERF_Prob.cpp  GNUmakefile  README.md  USMap.vtk  inputs_20050827_Katrina_Testing_dz_eq_200m_Kessler_ERFSurfaceLayer_GivesIntensificationTracksDeviate_AMR  inputs_20050827_Katrina_Testing_dz_eq_200m_Kessler_LargeDomain_ERFSurfaceLayer_GivesIntensificationTracksDeviate  inputs_20200826_Laura  inputs_20200826_Laura_2LevelAMR  inputs_20200826_Laura_NoAMR  inputs_20210819_Henri  inputs_20210819_Henri_NoAMR  inputs_20210821_Henri  inputs_Katrina_dz_200m_Smag3d_Kessler_SurfaceBulk
Exec/DevTests/InitFromNCFile/: ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  README.md  inputs  make_initial_data.py
Exec/DevTests/LLJ/: ERF_Prob.H  ERF_Prob.cpp  GNUmakefile
Exec/DevTests/LandSurfaceModel/: ERF_Prob.H  inputs
Exec/DevTests/ML_Init_HSE/: ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  inputs
Exec/DevTests/MetGrid/: GNUmakefile  inputs  inputs_flowmas_metgrid  inputs_flowmas_metgrid_NoZlev  inputs_flowmas_wrfinput
Exec/DevTests/MovingTerrain/: ERF_Prob.H  ERF_Prob.cpp  inputs
Exec/DevTests/MultiSpeciesBubble/: CMakeLists.txt  ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  inputs_dry_bubble.01species  inputs_dry_bubble.02species  inputs_moist_bubble.01species  inputs_moist_bubble.02species
Exec/DevTests/RICO/: ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  input_Kessler  input_Kessler_regtest  input_SAM  input_sdm
Exec/DevTests/Radiation/: ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  GNUmakefile_GPU  README  README.md  input_sounding_moist  inputs_radiation
Exec/DevTests/ScharMountain/: CMakeLists.txt  ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  input_sounding  inputs
Exec/DevTests/Shoc/: CMakeLists.txt  ERF_Prob.H  ERF_Prob.cpp  GNUmakefile  README  input_sounding_moist  inputs_shoc
Exec/DevTests/TemperatureSource/: ERF_Prob.H  ERF_Prob.cpp  neutral_column.i
Exec/DevTests/TemperatureSourceSpatial/: CMakeLists.txt  ERF_Prob.H  ERF_Prob.cpp  ERF_prob.cpp  GNUmakefile  input_Kessler  input_Kessler_regtest  input_sdm
Exec/DryRegTests/: CMakeLists.txt  ERF_Prob.cpp  GNUmakefile
Exec/LLJ/: ERF_Prob.H  ERF_Prob.cpp  inputs
Exec/MoistRegTests/: CMakeLists.txt  ERF_Prob.H  ERF_Prob.cpp  GNUmakefile
Exec/RegTests/: CMakeLists.txt  ERF_Prob.cpp  GNUmakefile
Exec/SpongeTest/: ERF_Prob.H  ERF_Prob.cpp  inputs_sponge_test
Exec/Tools/: CMakeLists.txt  GNUmakefile
Tests/: CMakeLists.txt  CTestList.cmake
Tests/Unit/: CMakeLists.txt  ERF_GTestHelloWorld.cpp  ERF_GTestMain.cpp  ERF_GTestParallelHelloWorld.cpp  ERF_GTestParallelMain.cpp  ERF_GTestRuntimeStubs.cpp
(+1662 files in other folders)
