set(erf_lib_name erf_srclib)
add_library(${erf_lib_name} OBJECT)
if (BUILD_SHARED_LIBS)
  set_target_properties(${erf_lib_name} PROPERTIES POSITION_INDEPENDENT_CODE ON)
endif()
include(${CMAKE_SOURCE_DIR}/CMake/BuildERFExe.cmake)
build_erf_lib(${erf_lib_name})
if(NOT ERF_BUILD_LIBRARY_ONLY)
if (ERF_ENABLE_REGRESSION_TESTS_ONLY)
  add_subdirectory(DryRegTests)
  add_subdirectory(DevTests/FlowInABox)
  add_subdirectory(DevTests/LandSurfaceModel)
  add_subdirectory(DevTests/Radiation)
  add_subdirectory(DevTests/TemperatureSource)
  add_subdirectory(DevTests/TropicalCyclone)
else ()
  add_subdirectory(ABL)
  add_subdirectory(DryRegTests)
  add_subdirectory(DevTests/FlowInABox)
  add_subdirectory(DevTests/LandSurfaceModel)
  add_subdirectory(DevTests/MultiSpeciesBubble)
  add_subdirectory(DevTests/Radiation)
  add_subdirectory(DevTests/RICO)
  add_subdirectory(DevTests/Shoc)
  add_subdirectory(DevTests/TemperatureSource)
  add_subdirectory(DevTests/TemperatureSourceSpatial)
  add_subdirectory(DevTests/TropicalCyclone)
  add_subdirectory(DevTests/Tornado)
  add_subdirectory(DevTests/sinusoidal_mass_flux)
  add_subdirectory(DevTests/WindFarmTests)
  add_subdirectory(MoistRegTests/Bomex)
  add_subdirectory(MoistRegTests/Bubble)
  add_subdirectory(MoistRegTests/SquallLine_2D)
  add_subdirectory(MoistRegTests/SuperCell_3D)
  add_subdirectory(MoistRegTests/WPS_and_Metgrid_Tests)
endif()

if(ERF_ENABLE_TOOLS)
  message(STATUS "Building additional ERF tools")
  add_subdirectory(Tools)
endif()

endif() # NOT ERF_BUILD_LIBRARY_ONLY
